src/main/fabric8/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: camel-rest
spec:
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
  type: ClusterIP
