src/main/fabric8/svc_springboot.yml
apiVersion: v1
kind: Service
metadata:
  name: springboot-svc
spec:
  ports:
    -
      name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
