src/main/fabric8/route.yml
apiVersion: v1
kind: Route
metadata:
  name: camel-rest
spec:
  port:
    targetPort: 8081
  to:
    kind: Service
    name: camel-rest
