src/main/fabric8/route_app.yml
apiVersion: v1
kind: Route
metadata:
  name: spring-boot
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: springboot-svc
