src/main/fabric8/route_tomcat.yml
apiVersion: v1
kind: Route
metadata:
  name: tomcat-route
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: springboot
